<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Viet Hospital</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_progress_signing_in">Signing in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="link_register"><u>New User</u></string>
    <string name="link_forgot_password"><u>Forgot Password</u></string>
    
    <!-- Strings related to register -->
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_dob">DOB</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_male">Male</string>
    <string name="prompt_female">Female</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_license">License</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="Canel">Cancel</string>
    <string name="Join">Join</string>
    
    <!-- Strings related to application -->
    <string name="logo_text">Viet Hospital</string>
    <string name="title_activity_register">Register User</string>
    <string name="action_settings">Settings</string>

</resources>